--- a/grams/static/styles.css
+++ b/grams/static/styles.css
@@ -37,7 +37,9 @@ h2 {
     width: 100%;
     position: fixed;
     z-index: 2;
-    background-color: #1B5E20;
+    /*background-color: #1B5E20;*/
+    background: rgb(27,94,32);
+    background: linear-gradient(50deg, rgba(27,94,32,1) 52%, rgba(54,177,59,1) 100%);
     -webkit-box-shadow: 0px 2px 11px -2px rgba(0,0,0,0.3);
     -moz-box-shadow: 0px 2px 11px -2px rgba(0,0,0,0.3);
     box-shadow: 0px 2px 11px -2px rgba(0,0,0,0.3);
@@ -76,6 +78,15 @@ h2 {
     .userbtn {
         font-size: 0.9em !important;
         margin-left: 10px;
+        transition: 0.3s;
+    }
+
+    .userbtn:hover {
+        opacity: 0.8;
+    }
+
+    .userbtn:focus {
+        color: #1B5E20;
     }
 
 
