--- a/grams/static/styles.css
+++ b/grams/static/styles.css
@@ -165,6 +165,43 @@ h2 {
     .userpanel .item-title {font-size: 0.8em; font-weight: 700;}
     .userpanel .item-info {font-size: 0.8em; color: black;}
 
+/* User Dropdown */
+
+.user-dropdown {
+    width: 160px;
+    padding: 0; margin: 0;
+    -webkit-box-shadow: 0px 2px 11px -2px rgba(0,0,0,0.3);
+    -moz-box-shadow: 0px 2px 11px -2px rgba(0,0,0,0.3);
+    box-shadow: 0px 2px 11px -2px rgba(0,0,0,0.3);
+}
+
+.user-dropdown a {
+    font-size: 0.8em;
+    color: #000;
+}
+
+.user-dropdown-wrapper {
+    padding: 0;
+}
+
+.user-dropdown-preamble {
+    font-size: 0.8em;
+    padding: 9px 8px 9px 8px;
+    border-bottom: 1px solid #eeeeee;
+    margin-bottom: 9px;
+}
+
+.user-dropdown-content {
+    display: block;
+    padding: 9px 8px 9px 8px;
+}
+
+    .user-dropdown-content:first-child {margin-top: 0;}
+    .user-dropdown-content:last-child {margin-bottom: 9px;}
+
+    .user-dropdown-content:hover {
+        background: #eee;
+    }
 
 /* Sidebar */
 
@@ -233,7 +270,7 @@ h2 {
             }
 
             .dropdown-container a:focus {
-                border-left: 3px solid #1B5E20;
+                border-left: 8px solid #1B5E20;
             }
 
         .fa-angle-down {
